[metadata]
name             = git-punchcard
description      = punchcard generator for git commit frequencies
long_description = file: README.rst
classifiers      =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: Public Domain
    Topic :: Software Development :: Version Control :: Git

[options]
py_modules = git_punchcard
python_requires = >=3.3
install_requires =
    numpy
    matplotlib
    pytz

[options.entry_points]
console-scripts =
    git-punchcard = git_punchcard:main
